# xenoverse-save-editor

./: .gitignore  CMakeLists.txt  README.md
include/: GameSave.h  XenoverseException.h
src/: GameSave.cpp  XenoverseException.cpp
test/: main.cpp
